# mcp-bitrix24

./: .env.example  .gitignore  README.md  bitrix_client.py  pyproject.toml  server.py
src/mcp_bitrix24/: client.py  server.py
