[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-bitrix24"
version = "0.1.2"
description = "MCP Server for Bitrix24 CRM — manage deals via Claude"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "bitrix24", "crm", "claude", "ai"]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mcp-bitrix24 = "mcp_bitrix24.server:main"

[project.urls]
Homepage = "https://github.com/lucbrito88-boop/mcp-bitrix24"
Repository = "https://github.com/lucbrito88-boop/mcp-bitrix24"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_bitrix24"]
